--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/postcss": "^4.1.14",
+    "class-variance-authority": "^0.7.1",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.545.0",
     "next": "^15.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.64.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
