--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.545.0",
     "next": "^15.5.4",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.64.0",
